# data_scaling

./: README.md
Theory Markdown/Rust/: Control Flow.md  Data Types.md  Defining an enum.md  Functions.md  Rust Basics.md  Variables and Mutability.md
data_scaling/: .gitignore  Cargo.toml
data_scaling/migrations/2023-11-20-153521_create_flora/: up.sql
data_scaling/migrations/2023-11-22-081523_create_herbs/: up.sql
data_scaling/migrations/2023-11-22-081551_create_plants/: up.sql
data_scaling/migrations/2023-11-22-081610_create_trees/: up.sql
data_scaling/migrations/2023-11-22-081631_create_flowers/: up.sql
data_scaling/migrations/2023-11-22-081648_create_fungi/: up.sql
data_scaling/src/: actors.rs  config.rs  database.rs  db_models.rs  db_utils.rs  dto.rs  insertables.rs  main.rs  messages.rs  routes.rs  schema.rs  server.rs
data_scaling/src/models/: discoverer.rs  flora.rs  mod.rs
data_scaling/src/services/: flora_service.rs  mod.rs  test_service.rs
