[package]
name = "data_scaling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
dotenv = "0.15"
env_logger = "0.10.0"
chrono = "0.4.31"
postgres = "0.19.7"
serde = "1.0.192"
serde_json = "1.0.108"
serde_derive = "1.0.192"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] }
