[package]
name = "data_scaling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
dotenv = "0.15"
env_logger = "0.10.0"
chrono = "0.4.31"
postgres = "0.19.7"
serde = "1.0.192"
serde_json = "1.0.108"
serde_derive = "1.0.192"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] }
envy = "0.4.2"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
fake = "2.9.1"
derive_more = "0.99.17"
validate = "0.6.1"
validator_derive = "0.16.0"
uuid = {version = "1.5.0", features = ["serde", "v4"] }
validator = "0.16.1"
actix = "0.13.1"
mysql = "24.0.0"
